deploy/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
spec:
  selector:
    matchLabels:
      app: red
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: red
    spec:
      restartPolicy: Always
      containers:
        - name: red
          image: ghcr.io/gitops-remote-dev/red:master-d1aea3b-1693687929
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 200m
              memory: 200M
