deploy/base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: red
spec:
  parentRefs:
    - kind: Gateway
      name: http
      namespace: flux-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /red
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: red
          port: 8080
